Fixing contact number alignment issue

--- a/style/contact.css
+++ b/style/contact.css
@@ -49,7 +49,7 @@ body {
 }
 
 .ourcontact {
-    padding: 5px 5px 5px 10px;
+    padding: 5px 5px 5px 100px;
     float: left;
 }
 
